syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.badsyntax.gradle";
option java_outer_classname = "GradleProto";

package gradle;

service Gradle {
  rpc GetBuild(GetBuildRequest) returns (stream GetBuildReply) {}
  rpc RunBuild(RunBuildRequest) returns (stream RunBuildReply) {}
  rpc CancelBuild(CancelBuildRequest) returns (CancelBuildReply) {}
  rpc CancelBuilds(CancelBuildsRequest) returns (CancelBuildsReply) {}
  rpc GetDaemonsStatus(GetDaemonsStatusRequest) returns (GetDaemonsStatusReply) {}
  rpc StopDaemons(StopDaemonsRequest) returns (StopDaemonsReply) {}
  rpc StopDaemon(StopDaemonRequest) returns (StopDaemonReply) {}
  rpc executeCommand(ExecuteCommandRequest) returns (ExecuteCommandReply) {}
}

message GetBuildRequest {
  string project_dir = 1;
  string cancellation_key = 2;
  GradleConfig gradle_config = 3;
  bool show_output_colors = 4;
}

message GetBuildReply {
  oneof kind {
    GetBuildResult get_build_result = 1;
    Progress progress = 2;
    Output output = 3;
    Cancelled cancelled = 4;
    Environment environment = 5;
    string compatibility_check_error = 6;
  }
}

message GetBuildResult {
  string message = 1;
  GradleBuild build = 2;
}

enum GradleDependencyType
{
  PROJECT = 0;
  CONFIGURATION = 1;
  DEPENDENCY = 2;
}

message DependencyItem {
  string name = 1;
  GradleDependencyType type = 2;
  repeated DependencyItem children = 3;
}

message GrpcGradleClosure {
  string name = 1;
  repeated GrpcGradleMethod methods = 2;
  repeated GrpcGradleField fields = 3;
}

message GrpcGradleMethod {
  string name = 1;
  repeated string parameterTypes = 2;
  bool deprecated = 3;
}

message GrpcGradleField {
  string name = 1;
  bool deprecated = 2;
}

message RunBuildRequest {
  string project_dir = 1;
  string cancellation_key = 2;
  repeated string args = 3;
  int32 java_debug_port = 4;
  GradleConfig gradle_config = 5;
  string input = 6;
  bool show_output_colors = 7;
  bool java_debug_clean_output_cache = 8;
}

message RunBuildResult {
  string message = 1;
}

message RunBuildReply {
  oneof kind {
    RunBuildResult run_build_result = 1;
    Progress progress = 2;
    Output output = 3;
    Cancelled cancelled = 4;
  }
}

message CancelBuildRequest {
  string cancellation_key = 1;
}

message CancelBuildsRequest {}

message CancelBuildReply {
  string message = 1;
  bool build_running = 2;
}

message CancelBuildsReply {
  string message = 1;
}

message GetDaemonsStatusRequest {
  string project_dir = 1;
}

message GetDaemonsStatusReply {
  repeated DaemonInfo daemon_info = 1;
}

message StopDaemonsRequest {
  string project_dir = 1;
}

message StopDaemonsReply {
  string message = 1;
}

message StopDaemonRequest {
  string pid = 1;
}

message StopDaemonReply {
  string message = 1;
}

message DaemonInfo {
  enum DaemonStatus {
    IDLE = 0;
    BUSY = 1;
    STOPPED = 2;
    STOPPING = 3;
    CANCELED = 4;
  }
  string pid = 1;
  DaemonStatus status = 2;
  string info = 3;
}

message GradleConfig {
  string gradle_home = 1;
  string user_home = 2;
  string jvm_arguments = 3;
  bool wrapper_enabled = 4;
  string version = 5;
  string java_extension_version = 6;
}

message GradleBuild { GradleProject project = 1; }

message GradleProject {
  bool is_root = 1;
  repeated GradleTask tasks = 2;
  repeated GradleProject projects = 3;
  string projectPath = 4;
  DependencyItem dependencyItem = 5;
  repeated string plugins = 6;
  repeated GrpcGradleClosure pluginClosures = 7;
  repeated string scriptClasspaths = 8;
}

message GradleTask {
  string name = 1;
  string group = 2;
  string path = 3;
  string project = 4;
  string buildFile = 5;
  string rootProject = 6;
  string description = 7;
  bool debuggable = 8;
}

message Cancelled {
  string message = 1;
  string project_dir = 2;
}

message Progress { string message = 1; }

message Environment {
  JavaEnvironment java_environment = 1;
  GradleEnvironment gradle_environment = 2;
}

message JavaEnvironment {
  string java_home = 1;
  repeated string jvm_args = 2;
}

message GradleEnvironment {
  string gradle_user_home = 1;
  string gradle_version = 2;
}

message Output {
  enum OutputType {
    STDERR = 0;
    STDOUT = 1;
  }

  OutputType output_type = 1;
  bytes output_bytes = 2;
}

message ExecuteCommandRequest {
    string command = 1;
    repeated string arguments = 2;
}

message ExecuteCommandReply {
    string result = 1;
}
