syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.badsyntax.gradletasks";
option java_outer_classname = "GradleTasksProto";

package gradletasks;

service GradleTasks {
  rpc GetBuild(GetBuildRequest) returns (stream GetBuildReply) {}
  rpc GetStatus(GetStatusRequest) returns (GetStatusReply) {}
  rpc RunTask(RunTaskRequest) returns (stream RunTaskReply) {}
  rpc CancelGetBuilds(CancelGetBuildsRequest) returns (CancelGetBuildsReply) {}
  rpc CancelRunTask(CancelRunTaskRequest) returns (CancelRunTaskReply) {}
  rpc CancelRunTasks(CancelRunTasksRequest) returns (CancelRunTasksReply) {}
}

message CancelGetBuildsRequest {}

message CancelGetBuildsReply { string message = 1; }

message GetTasksRequest { string project_dir = 1; }

message GetBuildRequest {
  string project_dir = 1;
  GradleConfig gradle_config = 2;
  bool show_output_colors = 8;
}

message GetBuildReply {
  oneof kind {
    GetBuildResult get_build_result = 1;
    Progress progress = 2;
    Output output = 3;
    Cancelled cancelled = 4;
    Environment environment = 5;
  }
}

message GetTasksResult {
  string message = 1;
  repeated GradleTask tasks = 2;
}

message GetBuildResult {
  string message = 1;
  GradleBuild build = 2;
}

message RunTaskRequest {
  enum OutputStream {
    BYTES = 0;
    STRING = 1;
  }
  string project_dir = 1;
  string task = 2;
  repeated string args = 3;
  bool java_debug = 4;
  int32 java_debug_port = 5;
  GradleConfig gradle_config = 6;
  string input = 7;
  bool show_output_colors = 8;
}

message RunTaskResult {
  string message = 1;
  string task = 2;
}

message CancelRunTaskRequest {
  string project_dir = 1;
  string task = 2;
}

message CancelRunTaskReply {
  string message = 1;
  string task = 2;
  bool task_running = 3;
}

message CancelRunTasksRequest {}

message CancelRunTasksReply { string message = 1; }

message GetStatusRequest {
  string project_dir = 1;
  GradleConfig gradle_config = 2;
}

message GetStatusReply {
  repeated DaemonInfo daemon_info = 1;
}

message DaemonInfo {
  enum DaemonStatus {
    IDLE = 0;
    BUSY = 1;
    STOPPED = 2;
    STOPPING = 3;
  }
  string pid = 1;
  DaemonStatus status = 2;
  string info = 3;
}

message RunTaskReply {
  oneof kind {
    RunTaskResult run_task_result = 1;
    Progress progress = 2;
    Output output = 3;
    Cancelled cancelled = 4;
  }
}

message GradleConfig {
  string user_home = 2;
  string jvm_arguments = 3;
  bool wrapper_enabled = 4;
  string version = 5;
}

message GradleBuild { GradleProject project = 1; }

message GradleProject {
  string name = 1;
  bool is_root = 2;
  repeated GradleTask tasks = 3;
  repeated GradleProject projects = 4;
}

message GradleTask {
  string name = 1;
  string group = 2;
  string path = 3;
  string project = 4;
  string buildFile = 5;
  string rootProject = 6;
  string description = 7;
}

message Cancelled {
  string message = 1;
  string project_dir = 2;
  string task = 3;
}

message Progress { string message = 1; }

message Environment {
  JavaEnvironment java_environment = 1;
  GradleEnvironment gradle_environment = 2;
}

message JavaEnvironment {
  string java_home = 1;
  repeated string jvm_args = 2;
}

message GradleEnvironment {
  string gradle_user_home = 1;
  string gradle_version = 2;
}

message Output {
  enum OutputType {
    STDERR = 0;
    STDOUT = 1;
  }

  OutputType output_type = 1;
  bytes output_bytes = 2;
}
